# simple-defi-cross

./: .gitignore  Anchor.toml  Cargo.toml  README.md  backup.txt  checkBalance.json  package.json  pnpm-lock.yaml  script.txt  yarrak.txt
app/: .env.example  .gitignore  README.md  deposit_logs.txt  logs.txt  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
app/src/: App.css  App.tsx
app/src/components/: ActionButtonList.tsx  AssetIdentityHub.tsx  NFTPositions.tsx  ThemeProvider.tsx  VaultManager.tsx
app/src/config/: index.tsx  programs.ts
app/src/context/: SelectionContext.tsx
app/src/idl/: simple_vault.json  test_token.json  unique_low.json
app/src/lib/: useNetWorkCycle.ts  useNetworkSync.ts  useToken.ts  useUniqueId.ts  useVault.ts
app/src/store/: networkStore.ts  tokenStore.ts  uniqueIdStore.ts  vaultStore.ts
app/src/types/: simple_vault.ts  test_token.ts  unique_low.ts
config/: updated-vault-config.json
keypairs/: new-share-mint-keypair.json
migrations/: addTokenATA.ts  checkFlow.ts  checkShareTokens.ts  checkVault.ts  closeVault.ts  deploy.ts  findTokenMint.ts  initNFTCollection.ts  initTestToken.ts  initVault.ts  reCreateVaults.ts  reInitVault.ts  tokenAccount.ts
programs/simple-vault/: Cargo.toml
programs/simple_vault/: Cargo.toml
programs/simple_vault/src/: constants.rs  lib.rs
programs/test_token/: Cargo.toml
programs/unique-id/: Cargo.toml
programs/unique-low/: Cargo.toml
programs/vault/: Cargo.toml
tests/: simple-vault.ts  simple_vault.ts  unique-id.ts  unique_low.ts  vault.ts  vault_full.ts
(+16 files in other folders)
