[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
anchor-framework = {version="0.31.1",features=["init-if-needed"]}
anchor-lang = {version="0.31.1",features=["init-if-needed"]}
anchor-lang-idl = "0.1.2"
anchor-spl = {version="0.31.1",features=["metadata"]}
solana-program = "2.3.0"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
spl-token-2022 = "8.0.1"
wormhole-vaas = "0.1.1"
wormhole-io = "0.3.0"
wormhole-supported-chains = "0.1.0"
#solana-program-test = "2.3.13"
#solana-sdk = "=2.3.1"