[package]
name = "simple_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
wormhole-vaas = { workspace = true }
wormhole-io = { workspace = true }
wormhole-supported-chains = { workspace = true }
solana-program = { workspace = true }
anchor-lang-idl = { workspace = true }
unique-low = { path = "../unique-low", features = ["cpi"] }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }

